API-Gateway - added api Gateway service - fixed dependecies - adapted frontend to port of gateway service

--- a/backend-java/EditorialSpring/ConfigService/src/main/resources/application.properties
+++ b/backend-java/EditorialSpring/ConfigService/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8088
+#spring.application.name=ConfigService
+#spring.profiles.active=native
+#spring.cloud.config.server.native.search-locations=classpath:/config, classpath:/common
