--- a/backend-java/EditorialSpring/ConfigService/src/main/resources/config/PostService.properties
+++ b/backend-java/EditorialSpring/ConfigService/src/main/resources/config/PostService.properties
@@ -1,4 +1,6 @@
 server.port=8081
+spring.application.name=PostService
+
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/postservice_db?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=user
