Rabbit MQ between post and review

--- a/backend-java/EditorialSpring/ConfigService/src/main/resources/config/GatewayService.yml
+++ b/backend-java/EditorialSpring/ConfigService/src/main/resources/config/GatewayService.yml
@@ -28,7 +28,7 @@ spring:
         - id: ReviewService
           uri: lb://ReviewService
           predicates:
-            - Path=/api/reviews/**
+            - Path=/api/review/**
           filters:
             #            - RewritePath=/employee/(?<path>.*), /$\{path}
             - DedupeResponseHeader=Access-Control-Allow-Origin
