--- a/backend-java/EditorialSpring/PostService/pom.xml
+++ b/backend-java/EditorialSpring/PostService/pom.xml
@@ -53,5 +53,9 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-config</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+    </dependency>
   </dependencies>
 </project>
