--- a/backend-java/EditorialSpring/ConfigService/src/main/resources/config/ReviewService.properties
+++ b/backend-java/EditorialSpring/ConfigService/src/main/resources/config/ReviewService.properties
@@ -10,3 +10,8 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.client.serviceUrl.defaultZone=http://localhost:8040/eureka/
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sandercrijns2004@gmail.com
+spring.mail.password=tiuz xoxa mxoo wxwl
