Added logback-spring.xml to all services

--- a/backend-java/EditorialSpring/ConfigService/src/main/resources/config/ReviewService.properties
+++ b/backend-java/EditorialSpring/ConfigService/src/main/resources/config/ReviewService.properties
@@ -14,4 +14,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=sandercrijns2004@gmail.com
-spring.mail.password=PUT_YOUR_PASSWORD_HERE
+spring.mail.password=tiuz xoxa mxoo wxwl
